# aml-in-coq

./: README.md  _CoqProject  aml.v  coq-aml.opam  dune-project
theories/AML/: Shallow.v  Signature.v  dune
theories/AML/ARS/: RuleBasedTransitionSystem.v  TransitionSystem.v
theories/AML/Lib/: Ensemble.v  Functions.v  Traces.v  TransitionSystem.v
theories/AML/ProofSystem/: ProofSystem.v
theories/AML/Proofs/: Proof.v  ProofSystem.v  TautologicalProof.v  Theorems.v
theories/AML/Semantics/: MLTransitionSystem.v  PatternValuation.v  Predicate.v  PropositionalPatternValuation.v  Satisfaction.v  SemanticConsequences.v  Structure.v  StructureReduct.v  Tautology.v  TransitionSystem.v  Validity.v  Valuation.v
theories/AML/Semantics/SemanticConsequences/: GlobalSemanticConsequence.v  LocalSemanticConsequence.v  StrongSemanticConsequence.v
theories/AML/Shallow/: PatternToShallow.v
theories/AML/Soundness/: GlobalSoundness.v  LocalSoundness.v  StrongSoundness.v
theories/AML/Syntax/: Expression.v  Pattern.v  PatternClosureProps.v  PatternTranslation.v  Reachability.v  Substitution.v  Variables.v
